--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/fs-extra-promise": "^1.0.10",
     "@types/glob": "^7.2.0",
     "@types/jest": "^27.0.2",
+    "@types/koa": "^2.13.4",
+    "@types/koa-mount": "^4.0.1",
+    "@types/koa-static": "^4.0.2",
     "@types/markdown-it": "^12.2.3",
     "@types/minimist": "^1.2.2",
-    "@types/progressbar": "^1.1.0",
     "@types/xo": "^0.39.1",
     "jest": "^27.3.1",
     "microbundle": "^0.14.1",
@@ -37,6 +39,9 @@
     "fs-extra-promise": "^1.0.1",
     "glob": "^7.2.0",
     "handlebars": "^4.7.7",
+    "koa": "^2.13.4",
+    "koa-mount": "^4.0.0",
+    "koa-static": "^5.0.0",
     "markdown-it": "^12.2.0",
     "minimist": "^1.2.5",
     "node-watch": "^0.7.2",
