--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bookone",
-  "version": "1.0.24",
+  "version": "1.0.25",
   "main": "dist/index.js",
   "author": "me@xcodebuild.com",
   "license": "MIT",
@@ -41,10 +41,13 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
+    "bufferutil": "^4.0.5",
+    "chrome-headless-render-pdf": "^1.9.0",
     "colors": "^1.4.0",
     "fs-extra-promise": "^1.0.1",
     "glob": "^7.2.0",
     "handlebars": "^4.7.7",
+    "http-graceful-shutdown": "^3.1.5",
     "koa": "^2.13.4",
     "koa-mount": "^4.0.0",
     "koa-static": "^5.0.0",
@@ -53,6 +56,7 @@
     "minimist": "^1.2.5",
     "node-watch": "^0.7.2",
     "ora": "5",
-    "static-server": "^2.2.1"
+    "static-server": "^2.2.1",
+    "utf-8-validate": "^5.0.7"
   }
 }
