--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bookone",
-  "version": "1.0.26",
+  "version": "1.0.27",
   "main": "dist/index.js",
   "author": "me@xcodebuild.com",
   "license": "MIT",
@@ -42,7 +42,6 @@
   },
   "dependencies": {
     "bufferutil": "^4.0.5",
-    "chrome-headless-render-pdf": "^1.9.0",
     "colors": "^1.4.0",
     "fs-extra-promise": "^1.0.1",
     "glob": "^7.2.0",
@@ -56,6 +55,7 @@
     "minimist": "^1.2.5",
     "node-watch": "^0.7.2",
     "ora": "5",
+    "puppeteer": "^11.0.0",
     "static-server": "^2.2.1",
     "utf-8-validate": "^5.0.7"
   }
